--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -478,7 +478,7 @@
                             <span class="hide-menu">PRACTICE</span>
                         </li>
 
-                        <!-- <li class="sidebar-item">
+                        <li class="sidebar-item">
                             <a class="sidebar-link {% block pp_active %} {% endblock %}" href="{% url 'problem_set' %}"
                                 aria-expanded="false">
                                 <span>
@@ -486,7 +486,7 @@
                                 </span>
                                 <span class="hide-menu">Practice Problems 💀</span>
                             </a>
-                        </li> -->
+                        </li>
 
                         <!-- <li class="sidebar-item" >
                             <a class="sidebar-link {% block sheet_active %} {% endblock %}" href="#"
