added the attendance visuaizer system

--- a/templates/administration/index.html
+++ b/templates/administration/index.html
@@ -337,7 +337,7 @@ Administration -> Home
                                         class="btn btn-outline-info">Open {{ latest_sheet.name }} Sheet</a>
                                 </td>
                                 <td class="border-bottom-0">
-                                    <a href="{% url 'admin_flames_registrations' %}" class="btn btn-outline-success">FLAMES REGISTRATIONS</a>
+                                    <a href="{% url 'attendance_visualizer' %}" class="btn btn-outline-success">Attendance Visualizer</a>
                                 </td>
                             </tr>
 
