removed the question system completely

--- a/templates/student/index.html
+++ b/templates/student/index.html
@@ -305,13 +305,13 @@ Student | Home
                                             class="me-1 rounded-circle bg-light-success round-20 d-flex align-items-center justify-content-center">
                                             <i class="ti ti-arrow-up-right text-success"></i>
                                         </span>
-                                        <p class="text-dark me-1 fs-3 mb-0">{{ questions_completion_percentage }}%</p>
+                                        <p class=" me-1 fs-3 mb-0">{{ questions_completion_percentage }}%</p>
                                         <p class="fs-3 mb-0">Completed</p>
 
                                     </div>
                                     <div class="d-flex align-items-center">
                                         <div class="me-4">
-                                            <span class="round-8 bg-primary rounded-circle me-2 d-inline-block"></span>
+                                            <span class="round-8 bg-white rounded-circle me-2 d-inline-block"></span>
                                             <span class="fs-2">{{ questions_left }} Left</span>
 
                                         </div>
@@ -679,7 +679,7 @@ Student | Home
                                 <td class="border-bottom-0 text-center">
                                     <div class="d-flex align-items-center gap-2">
 
-                                        <a href="{% url 'practice_problem_set' %}" class="btn btn-outline-primary">Practice More
+                                        <a href="{% url 'my_batches' %}" class="btn btn-outline-primary">View My Batches
                                         </a>
 
                                     </div>
