--- a/templates/administration/index.html
+++ b/templates/administration/index.html
@@ -326,7 +326,7 @@ Administration | Home
                                     <a href="{% url 'add_question' %}" class="btn btn-outline-primary">Add Question</a>
                                 </td>
                                 <td class="border-bottom-0">
-                                    <a href="{% url 'set_pod' %}" class="btn btn-outline-secondary">Set General POD</a>
+                                    <a href="{% url 'administrator_batches' %}" class="btn btn-outline-secondary">Set Batch PODs</a>
                                 </td>
                                 <td class="border-bottom-0">
                                     <a href="{% url 'administrator_add_sheet' %}" class="btn btn-outline-warning">Add
