--- a/templates/student/index.html
+++ b/templates/student/index.html
@@ -305,8 +305,8 @@ Student | Home
                                             class="me-1 rounded-circle bg-light-success round-20 d-flex align-items-center justify-content-center">
                                             <i class="ti ti-arrow-up-right text-success"></i>
                                         </span>
-                                        <p class=" me-1 fs-3 mb-0">{{ questions_completion_percentage }}%</p>
-                                        <p class="fs-3 mb-0">Completed</p>
+                                        <p class="text-light-primary me-1 fs-3 mb-0">{{ questions_completion_percentage }}%</p>
+                                        <p class="text-light-primary fs-3 mb-0">Completed</p>
 
                                     </div>
                                     <div class="d-flex align-items-center">
