--- a/templates/student/index.html
+++ b/templates/student/index.html
@@ -546,21 +546,21 @@ Student | Home
                     {% endcomment %}
 
                     <li class="timeline-item d-flex position-relative overflow-hidden">
-                        <div class="timeline-time flex-shrink-0 text-end fw-bold">Coming Soon!</div>
+                        <div class="timeline-time flex-shrink-0 text-end fw-bold">9:00 PM</div>
                         <div class="timeline-badge-wrap d-flex flex-column align-items-center">
                             <span class="timeline-badge border-2 border border-primary flex-shrink-0 my-8"></span>
                             <span class="timeline-badge-border d-block flex-shrink-0"></span>
                         </div>
-                        <div class="timeline-desc fs-3 mt-n1 text-primary fw-semibold">Coming Soon!
+                        <div class="timeline-desc fs-3 mt-n1 text-primary fw-semibold">Python Class
                         </div>
                     </li>
                     <li class="timeline-item d-flex position-relative overflow-hidden">
-                        <div class="timeline-time flex-shrink-0 text-end fw-bold">Coming Soon!</div>
+                        <div class="timeline-time flex-shrink-0 text-end fw-bold">9:00 PM</div>
                         <div class="timeline-badge-wrap d-flex flex-column align-items-center">
                             <span class="timeline-badge border-2 border border-success flex-shrink-0 my-8"></span>
                             <span class="timeline-badge-border d-block flex-shrink-0"></span>
                         </div>
-                        <div class="timeline-desc fs-3 mt-n1 text-success fw-semibold">Coming Soon!
+                        <div class="timeline-desc fs-3 mt-n1 text-success fw-semibold">C Programming
                         </div>
                     </li>
                     <li class="timeline-item d-flex position-relative overflow-hidden">
