changed the location of certificates

--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -412,6 +412,17 @@
 
                             </a>
                         </li>
+
+                        <li class="sidebar-item">
+                            <a class="sidebar-link {% block my_certificates_active %} {% endblock %}"
+                                href="{% url 'my_certificates' %}" aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-article"></i>
+                                </span>
+                                <span class="hide-menu">My Certificates</span>
+
+                            </a>
+                        </li>
 <!-- id="leveller-btn" -->
                         <li class="sidebar-item" >
                             <a class="sidebar-link {% block summer_active %} {% endblock %}"
