--- a/templates/student/view_certificate.html
+++ b/templates/student/view_certificate.html
@@ -1,15 +1,12 @@
 {% extends "student/base.html" %}
 {% load static %}
 
-{% block summer_active %}
+{% block my_certificates_active %}
 active
 {% endblock %}
 
 {% block title %}The Angaar Batch | Summers {% endblock %}
 
-{% block extra_css %}
-
-{% endblock %}
 
 {% block body %}
 <div class="container-fluid">
