fixed the batch page on student side

--- a/templates/student/batch/batch.html
+++ b/templates/student/batch/batch.html
@@ -28,13 +28,7 @@ active
 
     @keyframes css-progress {
         to {
-            --progress-value: {
-                    {
-                    progress
-                }
-            }
-
-            ;
+            --progress-value: {{ progress }};
         }
     }
 
@@ -271,13 +265,6 @@ active
                                             {% endif %}
                                         </a>
 
-                                        {% else %}
-
-                                        <a id="random-question-generator1" href="{% url 'get_random_question' %}"
-                                            onclick="return random_generator();"
-                                            class="btn btn-sm btn-outline-success fs-2 mb-n1 mt-n2 mx-n1">Get a random
-                                            question</a>
-
                                         {% endif %}
                                     </div>
                                 </div>
@@ -327,11 +314,7 @@ active
                                             {% if total_questions_solved_percentage == 100 %}
                                             <button class="btn btn-sm btn-outline-success fs-2 mb-n1 mt-n2 mx-n1">All
                                                 Solved</button>
-                                            {% else %}
-                                            <a id="random-question-generator2" href="{% url 'get_random_question' %}"
-                                                onclick="return random_generator2();"
-                                                class="btn btn-sm btn-outline-success fs-2 mb-n1 mt-n2 mx-n1">Get a
-                                                random question</a>
+                                            
                                             {% endif %}
                                         </div>
 
@@ -343,7 +326,7 @@ active
 
 
                                             <div class="progress-bar css">
-                                                <progress id="css" min="0" max="100" value="70"></progress>
+                                                <progress id="css" min="0" max="100" value="{{ progress }}"></progress>
 
                                             </div>
 
