--- a/templates/student/index.html
+++ b/templates/student/index.html
@@ -552,6 +552,9 @@ Student | Home
                             <span class="timeline-badge-border d-block flex-shrink-0"></span>
                         </div>
                         <div class="timeline-desc fs-3 mt-n1 text-primary fw-semibold">Python Class
+                            <a href="https://chat.whatsapp.com/CsAGcFvmM4D6lgBQXBYmby" target="_blank" class="btn btn-sm btn-outline-primary">Join
+                                <i class="ti ti-user"></i>
+                            </a>
                         </div>
                     </li>
                     <li class="timeline-item d-flex position-relative overflow-hidden">
@@ -561,6 +564,9 @@ Student | Home
                             <span class="timeline-badge-border d-block flex-shrink-0"></span>
                         </div>
                         <div class="timeline-desc fs-3 mt-n1 text-success fw-semibold">C Programming
+                            <a href="https://chat.whatsapp.com/LHsRJOlzUSn7IkdJCcQa84" target="_blank" class="btn btn-sm btn-outline-success">Join
+                                <i class="ti ti-user"></i>
+                            </a>
                         </div>
                     </li>
                     <li class="timeline-item d-flex position-relative overflow-hidden">
